tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/ca-central-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-256cec4e",
                    "RouteTableId": "rtb-b1d0c1d9"
                }
            ],
            "OwnerId": "111111111111",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-b1d0c1d9",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-31549759",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0e1e3b66"
        }
    ]
}
